--- a/demo/walk-tour-demo.html
+++ b/demo/walk-tour-demo.html
@@ -63,7 +63,7 @@ Polymer({
   attached : function() {
     this.async(function() {
 
-      /*************Elelment Id , Title , Message, Version Number ******************************** */
+      /*************Element Id , Title , Message, Version Number, Unique Key ******************************** */
       this._showHelp(this.$.div1, "DashBoard", "This is the Main Page .View User Preferences Here!", 1, "dashboard");
       this._showHelp(this.$.div2, "Charts Menu", "View Your Statistics Here!", "chartsMenu");
       this._showHelp(this.$.div3, "Maps Menu", "View Different Locations on Map Here !", "mapsMenu");
